test_result.txt
=== Login ===
HTTP 200
    <title>SKYMAXX Login</title>
      .error{background:#fef2f2;border:1px solid #fecaca;color:#991b1b;padding:10px 12px;border-radius:8px;font-size:13px;margin-bottom:16px}
      <div class="error">Invalid username or password</div>

=== Cookies set ===


=== GET /api/sequence/templates ===
HTTP 401
  File "<string>", line 9
    print(f"  step{t[\"step\"]}: edited={t.get(\"edited\")}, subj={t[\"subject\"][:65]}")
                      ^
SyntaxError: unexpected character after line continuation character

=== POST save_template (step 1) ===
{"error":"unauthorized","login_url":"/login"}

HTTP 401

=== Verify edit ===
Traceback (most recent call last):
  File "<string>", line 4, in <module>
TypeError: string indices must be integers, not 'str'

=== Reset step 1 ===
{"error":"unauthorized","login_url":"/login"}

HTTP 401

=== Verify reset ===
Traceback (most recent call last):
  File "<string>", line 4, in <module>
TypeError: string indices must be integers, not 'str'

=== Audit ALL templates for assumption phrases ===
Traceback (most recent call last):
  File "<string>", line 5, in <module>
TypeError: string indices must be integers, not 'str'
